# CLI-Demo

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: SUBMISSION.md
resume_cli/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  file_io.py  logging_config.py  output.py  pdf_parser.py
resume_cli/ai/: client.py  json_repair.py  mock.py  prompts.py
resume_cli/schemas/: __init__.py  extract.py  score.py
resume_cli/services/: extract_service.py  score_service.py
samples/: README.md  sample_jd.txt
scripts/: generate_sample_pdf.py
tests/: conftest.py  test_cli_mock.py  test_json_repair.py  test_pdf_parser.py
