[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-cli"
version = "0.1.0"
description = "AI-powered resume parsing CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pypdf>=4.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
resume-cli = "resume_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
